--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
             --card: #0b1220cc;
             --accent1: #6c63ff;
             --accent2: #0d6efd;
-            --muted: #c0c6d4;
-            --text: #e6eef8;
+            --muted: #aab4c8;
+            /* كان غامق جدًا، عدلته لأفتح */
+            --text: #f5f9ff;
+            /* نص رئيسي أوضح */
         }
 
         body.light-mode {
@@ -35,6 +37,19 @@
             --accent2: #0d6efd;
             --muted: #555c66;
             --text: #1c1c1c;
+        }
+
+        .card-glass p,
+        .card-glass .text-muted,
+        .portfolio-caption .text-muted {
+            color: var(--muted) !important;
+        }
+
+        .card-glass h3,
+        .card-glass h4,
+        .card-glass h5,
+        .card-glass strong {
+            color: var(--text) !important;
         }
 
         html,
@@ -47,6 +62,7 @@
             font-family: 'Cairo', system-ui, Segoe UI, Roboto, -apple-system, "Helvetica Neue", Arial;
             background: var(--bg);
             color: var(--text);
+            --muted: #c0c6d4;
             transition: background 0.4s, color 0.4s;
         }
 
@@ -120,6 +136,12 @@
             font-weight: 800;
             font-size: 44px;
             color: white;
+        }
+
+        .avatar img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
 
         .hero h1 {
@@ -239,6 +261,16 @@
             transition: transform .25s
         }
 
+        #about .card-glass {
+            transition: transform .35s, box-shadow .35s;
+            box-shadow: 0 10px 30px rgba(2, 6, 23, 0.3);
+        }
+
+        #about .card-glass:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 20px 45px rgba(2, 6, 23, 0.35);
+        }
+
         .social-round a:hover {
             transform: translateY(-6px);
             box-shadow: 0 12px 30px rgba(2, 6, 23, 0.4)
@@ -341,7 +373,9 @@
             </div>
 
             <div class="hero-right" data-aos="zoom-in" data-aos-delay="200">
-                <div class="avatar" id="avatar">أس</div>
+                <div class="avatar" id="avatar">
+                    <img src="me.jpg" alt="أسامة" />
+                </div>
             </div>
         </section>
 
@@ -481,14 +515,15 @@
                 <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
                     <div class="card-glass p-4">
                         <div class="social-round mb-3">
-                            <a class="whatsapp" href="https://wa.me/967XXXXXXXX" target="_blank" title="واتساب">
+                            <a class="whatsapp" href="https://wa.me/967779279428" target="_blank" title="واتساب">
                                 <i class="fab fa-whatsapp fa-lg"></i>
                             </a>
-                            <a class="github" href="https://github.com/username" target="_blank" title="GitHub">
+                            <a class="github" href="https://github.com/OsamahBagah-Backend" target="_blank"
+                                title="GitHub">
                                 <i class="fab fa-github fa-lg"></i>
                             </a>
-                            <a class="linkedin" href="https://linkedin.com/in/username" target="_blank"
-                                title="LinkedIn">
+                            <a class="linkedin" href="https://www.linkedin.com/in/osamah-bagah-153680263"
+                                target="_blank" title="LinkedIn">
                                 <i class="fab fa-linkedin-in fa-lg"></i>
                             </a>
                         </div>
