--- a/index.html
+++ b/index.html
@@ -340,8 +340,9 @@
                         <li class="nav-item"><a class="nav-link" href="#services">الخدمات</a></li>
                         <li class="nav-item"><a class="nav-link" href="#benefits">لماذا موقع؟</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">الأعمال</a></li>
-                        <li class="nav-item"><a class="nav-link btn btn-sm btn-outline-light px-3" href="#contact">تواصل
-                                الآن</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link special-link px-3" href="#contact">تواصل الآن</a>
+                        </li>
                     </ul>
                     <button class="mode-toggle ms-3" id="modeToggle" title="تغيير النمط">
                         <i class="fa fa-moon"></i>
@@ -374,7 +375,7 @@
 
             <div class="hero-right" data-aos="zoom-in" data-aos-delay="200">
                 <div class="avatar" id="avatar">
-                    <img src="me.jpg" alt="أسامة" />
+                    <i class="fa fa-code"></i>
                 </div>
             </div>
         </section>
